--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "express": "3.0.0rc4",
-    "jade": "*",
     "stylus": "*",
     "coffee-script": "~1.3.3",
-    "nib": "~0.8.2"
+    "nib": "~0.8.2",
+    "socket.io": "~0.9.10"
   }
 }
